Text Spacing Fix
Outlook 2013 was a) not using margins, b) not building margin when a paragraph ended in a link.
Solution: Class to set margins to 0px in other clients and then used foundation inky spacer tags.
Now distances between paragraphs are like in the template in all clients. (Except for Lotus notes 8.5 which is annoying anyway.)

--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -47,6 +47,6 @@ table.body table.container div.hide-for-large-custom *, table.body table.contain
 
 a{text-decoration: underline; Text-decoration: underline;}
 
-p.terms{margin-bottom: 0px; Margin-bottom:0px}
+p.no-margin{margin-bottom: 0px; Margin-bottom:0px}
 
 p.title-label{margin-bottom: 20px; Margin-bottom:20px; margin-top: 20px; Margin-top:20px}
